--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -393,6 +393,7 @@ body.home {
 
   #main {
     background-color: $white;
+    overflow-x: hidden;
   }
 
   .col-intro {
@@ -799,6 +800,13 @@ body.about {
 
   .row {
     &.about-hero {
+      max-width: 1280px;
+      display: flex;
+      justify-content: flex-end;
+      img {
+        max-width: 100%;
+        height:100%;
+      }
       .col {
         padding-left: 0;
         padding-right: 0;
@@ -836,6 +844,9 @@ body.about {
           font-size: 7rem;
           color: $aqualink;
         }
+        @include media-breakpoint-down(lg) {
+          max-width: 2%;
+        }
       }
 
       .descr {
@@ -857,6 +868,10 @@ body.about {
 
       .figure {
         min-width: 180px;
+        @include media-breakpoint-down(lg) {
+        max-width: 18%;
+        margin-left: 3.2rem;
+        }
       }
 
       @media (max-width: 768px) {
@@ -865,21 +880,31 @@ body.about {
         }
       }
     }
+    @include media-breakpoint-up(lg) {
+      &.about-obj-index-1 {
+        .number {
+          order: 1;
+          margin-left: 82%; 
+          width: 8%;
+        }
+      }
+    }
 
     @include media-breakpoint-up(md) {
       &.about-obj-index-1 {
         .number {
-          order: 1;
-          margin-left: 82%;
+          order: 3;
+          /* margin-left: 82%; */
           width: 8%;
+          margin-left: 0;
         }
 
         .figure {
-          order: 3;
+          order: 2;
         }
 
         .descr {
-          order: 2;
+          order: 1;
           margin-left: 8.33333333%;
         }
       }
@@ -906,7 +931,7 @@ body.about {
 
 
     &.about-people-head {
-      margin-bottom: 8.0rem;
+      margin-bottom: 5.2rem;
       h2 {
         font-family: $brandongrotesque-bold;
         font-size: 4rem;
@@ -940,7 +965,7 @@ body.about {
         color: $dnd-darkgreen;
         font-style: italic;
         text-align: center;
-        margin-bottom: 1.6rem;
+        margin-bottom: 3.2rem;
         line-height: 100%;
       }
       .bio {
@@ -955,7 +980,9 @@ body.about {
         text-align: center;
       }
     }
-
+    &.about-staff {
+      margin-bottom: 9.2rem;
+    }
     h3.about-staff,
     h3.about-partners {
       font-family: $brandongrotesque-bold;
@@ -963,7 +990,7 @@ body.about {
       color: $dnd-navy;
       line-height: 100%;
       text-align: center;
-      margin-top: 8.8rem;
+      margin-top: 5.8rem;
       margin-bottom: 8.8rem;
       width: 100%;
     }
