--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <div class="row about-hero">
-  <div class="col  col-lg-7 col-md-8 col-sm-12 offset-lg-6 offset-md-4 offset-sm-0">
+  <!--<div class="col  col-lg-7 col-md-8 col-sm-12 offset-lg-6 offset-md-4 offset-sm-0">-->
     {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.image }}
     {{ with $.Site.GetPage "page" "uploads/_index.md" }}
         {{ with .Resources.GetMatch $img }}
@@ -9,7 +9,7 @@
               <img class="flex-child" src="{{ $img102.RelPermalink }}" width="742" height="464" alt="About page banner image" tabindex="-1">
         {{ end }}
     {{ end }}
-  </div>
+  <!--</div>-->
 </div>
 
 <div class="row about-descr">
@@ -77,7 +77,7 @@
   {{ range .Site.Data.people }}
     {{ if eq .role "staff" }}
     <div class="col col-sm-12 col-md-3 col-lg-3 flex-child">
-      <div class="pic">
+      <!--<div class="pic">
         {{ $img := strings.TrimPrefix "/uploads/" .image }}
         {{ $name := .name }}
         {{ with $.Site.GetPage "page" "uploads/_index.md" }}
@@ -86,19 +86,19 @@
             <img class="flex-child" src="{{ $imgDir.RelPermalink }}" width="232" height="232" alt="Director {{ $name }}" tabindex="0">
           {{ end }}
         {{ end }}
-      </div>
+      </div>-->
       <div class="name">{{ .name }}</div>
       <div class="title"> {{ .title }}</div>
-      <div class="bio" tabindex="-1">{{ .blurb }}</div>
+      <!--<div class="bio" tabindex="-1">{{ .blurb }}</div>
       <div class="morelink-parent">
         <button class="btn btn-custom btn-bio" tabindex="0" aria-label="Read bio" data-toggle="modal" data-target="#peopleBioModal">MORE INFO</button>
-      </div>
+      </div>-->
     </div>
     {{ end }}
   {{ end }}
 </div>
 
-<div class="row about-partners-head">
+<!--<div class="row about-partners-head">
   <h3 class="about-partners">PARTNERS</h3>
 </div>
 
@@ -125,7 +125,7 @@
     </div>
     {{ end }}
   {{ end }}
-</div>
+</div>-->
 
 {{ partial "modal" . }}
 
