--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -814,7 +814,9 @@ body.about {
     }
 
     &.about-descr {
-      margin-top: -100px;
+      @include media-breakpoint-up(md) { 
+        margin-top: -100px;
+      }
       margin-bottom: 14rem;
       .col {
         background-color: $aqua;
@@ -838,14 +840,32 @@ body.about {
 
     &.about-objective {
       margin-bottom: 11.6rem;
+      display: inline-block;
+      @include media-breakpoint-down(md) {
+        padding-left: 4rem;
+        padding-right: 4rem;
+      }
+      @include media-breakpoint-up (md) {
+        display: flex;
+      }
       .number {
         span {
           font-family: $brandongrotesque-bold;
           font-size: 7rem;
           color: $aqualink;
         }
-        @include media-breakpoint-down(lg) {
+      
+        @include media-breakpoint-up(md) {
           max-width: 2%;
+        }
+        @include media-breakpoint-down(sm) {
+          width: 35%;
+          max-width: 46%;
+          /* width: 300px; */
+          display: inline-block;
+          padding: 0;
+          text-align: right;
+          margin: 0;
         }
       }
 
@@ -872,11 +892,17 @@ body.about {
         max-width: 18%;
         margin-left: 3.2rem;
         }
+        @include media-breakpoint-down(sm) {
+          max-width: 45%;
+          margin-left: 0;
+          width: 50%;
+          display: inline-block;
+        }
       }
 
       @media (max-width: 768px) {
         .figure {
-          display: none;
+          
         }
       }
     }
@@ -905,11 +931,17 @@ body.about {
 
         .descr {
           order: 1;
+          
+        }
+      }
+    }
+    @include media-breakpoint-up(mmd) {
+      &.about-obj-index-1 {
+        .descr {
           margin-left: 8.33333333%;
         }
       }
     }
-
     @include media-breakpoint-up(lg) {
       &.about-obj-index-1 {
         .number {
