Add new Projects hero

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/projects.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/projects.html
@@ -3,7 +3,7 @@
 {{ $projects_hero_img := strings.TrimPrefix "/uploads/" .Page.Params.hero_image }}
 {{ with $.Site.GetPage "page" "uploads/_index.md" }}
 {{ with .Resources.GetMatch $projects_hero_img }}
-{{$projects_hero := .Fill "1024x310 TopLeft"}}
+{{$projects_hero := .Fill "2880x872 BottomLeft"}}
 <div id="" class="jumbotron row" style="background-image: url('{{ $projects_hero.RelPermalink }}');">
 </div>
 {{ end }}
