Update projects single page

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/projects/single.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/projects/single.html
@@ -17,6 +17,15 @@
 {{ end }}
 {{ end }}
 
+{{ $projects_hero_img_fw := strings.TrimPrefix "/uploads/" .Page.Params.hero_image_fw }}
+{{ with $.Site.GetPage "page" "uploads/_index.md" }}
+{{ with .Resources.GetMatch $projects_hero_img_fw }}
+
+<div id="" class="jumbotron_fw row"><img src="{{ .RelPermalink }}">
+</div>
+{{ end }}
+{{ end }}
+
 <div class="row content">
   <div class="col-md-8 offset-md-2">
     {{ .Content }}
