--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -1216,6 +1216,7 @@ body.type-projects.kind-section {
       background-repeat: no-repeat;
       background-size: cover;
       margin-bottom: 6.4rem;
+      background-position-y: bottom;
     }
 
     h2,
@@ -1247,8 +1248,10 @@ body.type-projects.kind-section {
     }
 
     .morelink-parent {
-      margin-top: 4.2rem;
       margin-bottom: 5.6rem;
+      a {
+        margin-top: 4.2rem;
+      }
 
       &:after {
         content: "";
@@ -1270,6 +1273,19 @@ body.type-projects {
         background-size: cover;
         margin-bottom: 3.8rem;
       }
+      &.jumbotron_fw {
+        display: block;
+        margin-bottom: 3.8rem;
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+      }
+      img.content_well {
+        max-width: 90%;
+        margin: auto;
+        display: block;
+      }
       h2 {
         font-family: $brandongrotesque-bold;
         font-size: 3.2rem;
@@ -1277,7 +1293,7 @@ body.type-projects {
         line-height: 4rem;
         text-transform: uppercase;
         // margin-left: 20rem;
-        margin-top: 8rem;
+        margin-top: 4.8rem;
         margin-bottom: 4.8rem;
       }
       &.content {
@@ -1323,7 +1339,47 @@ body.type-meetings.kind-section {
       margin-bottom: 6.4rem;
     }
   }
-}   
+} 
+
+.news-banner {
+  &.staytuned {
+    margin-top: -104px;
+    @include media-breakpoint-up(mmd) {
+      text-align: center;
+      display: block;
+    }
+  }
+  &.projectstitle {
+    margin-top: -104px;
+    margin-bottom: 7.2rem;
+    /* @include media-breakpoint-up(mmd) {
+      text-align: center;
+      display: block;
+    } */
+  }
+  .column {
+    background-color: $aqua;
+    justify-content: flex-start;
+    padding: 4rem;
+    margin-right: auto;
+    margin-left: auto;
+    color: $dnd-navy;
+
+    h3 {
+      font-family: $brandongrotesque-bold;
+      font-size: 4rem;
+      text-transform: uppercase;
+      color: $dnd-navy;
+      margin-bottom: 0.8rem;
+    }
+    span {
+      font-family: $font-family-base;;
+      font-size: 1.8rem;
+      line-height: 2.4rem;
+    }
+  }
+}
+
 .kind-section.type-meetings {
   .row {
 
@@ -1333,38 +1389,7 @@ body.type-meetings.kind-section {
     //   padding: 4.0rem;
     // }
 
-    &.news-banner {
-      &.staytuned {
-        margin-top: -104px;
-        @include media-breakpoint-up(mmd) {
-          text-align: center;
-          display: block;
-        }
-        span.center-span {
-          
-        }
-      }
-      .column {
-        background-color: $aqua;
-        justify-content: flex-start;
-        padding: 4rem;
-        margin-right: auto;
-        margin-left: auto;
-        color: $dnd-navy;
-
-        h3 {
-          font-family: $brandongrotesque-bold;
-          font-size: 2.8rem;
-          text-transform: uppercase;
-          color: $dnd-navy;
-        }
-        span {
-          font-family: $brandongrotesque-reg;
-          font-size: 1.8rem;
-          line-height: 2.4rem;
-        }
-      }
-    }
+    
 
     &.whydignity {
       .column {
