--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/one-col-news.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/one-col-news.html
@@ -14,7 +14,7 @@
             {{ end }}
         {{ end }}
         <div class="home-news-item-one">
-            <a class="link-news" href="#" tabindex="0">{{ .Title }}</a>
+            <a class="link-news" href="https://www.princeton.edu/news/2018/05/10/sociologist-wherry-studying-money-and-human-values" tabindex="0">{{ .Title }}</a>
             <time datetime="{{ $dateTime }}" tabindex="0">{{ .PublishDate.Format $dateFormat }}</time>
             {{ .Content }}
             <a class="btn btn-custom" target="_blank" href="{{ "https://www.princeton.edu/news/2018/05/10/sociologist-wherry-studying-money-and-human-values" | absURL }}" tabindex="0" aria-label="Go to news article">READ MORE</a>
