Change Wherry photo

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
@@ -54,7 +54,7 @@
       {{ with $.Site.GetPage "page" "uploads/_index.md" }}
         {{ with .Resources.GetMatch $img }}
           {{$imgDir := .Fill "232x232 Center"}}
-          <img class="flex-child" src="{{ $imgDir.RelPermalink }}" width="232" height="232" alt="Director {{ $name }}" tabindex="0">
+          <img class="flex-child" src="/uploads/ffwherry_bio.jpg" width="232" height="232" alt="Director {{ $name }}" tabindex="0">
         {{ end }}
       {{ end }}
     </div>
