--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -1374,7 +1374,7 @@ body.type-meetings.kind-section {
       margin-bottom: 0.8rem;
     }
     span {
-      font-family: $font-family-base;;
+      font-family: $font-family-base;
       font-size: 1.8rem;
       line-height: 2.4rem;
     }
