--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
@@ -73,9 +73,10 @@
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="theme-color" content="#ffffff">
   <!-- TODO: Replace with Adobe Caslon Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lusitana|Radley" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Crimson+Text|Lusitana|Radley" rel="stylesheet">-->
   <!-- font awesome for social icons in footer -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.typekit.net/ayl0mep.css">
   <!-- Page title -->
   {{ $title := print .Title " | " .Site.Title }}
   {{ if .IsHome }}
