Update Visualizing page hero + images

--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -1284,7 +1284,7 @@ body.type-projects {
       }
       img.content_well {
         max-width: 90%;
-        margin: auto;
+        margin: 3.2rem auto;
         display: block;
       }
       h2 {
@@ -1294,8 +1294,8 @@ body.type-projects {
         line-height: 4rem;
         text-transform: uppercase;
         // margin-left: 20rem;
-        margin-top: 4.8rem;
-        margin-bottom: 4.8rem;
+        margin-top: 3.2rem;
+        margin-bottom: 3.2rem;
       }
       &.content {
         font-family: $font-family-base;
