--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/about.html
@@ -1,16 +1,26 @@
 {{ define "main" }}
 
-<div class="row about-hero">
+<!--<div class="row about-hero">-->
   <!--<div class="col  col-lg-7 col-md-8 col-sm-12 offset-lg-6 offset-md-4 offset-sm-0">-->
-    {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.image }}
+    <!--{{ $img := strings.TrimPrefix "/uploads/" .Page.Params.image }}
     {{ with $.Site.GetPage "page" "uploads/_index.md" }}
         {{ with .Resources.GetMatch $img }}
               {{$img102 := .Fill "1484x928 Center"}}
               <img class="flex-child" src="{{ $img102.RelPermalink }}" width="742" height="464" alt="About page banner image" tabindex="-1">
         {{ end }}
-    {{ end }}
+    {{ end }}-->
   <!--</div>-->
+<!--</div>-->
+
+{{ $about_hero_img := strings.TrimPrefix "/uploads/" .Page.Params.hero_image }}
+{{ with $.Site.GetPage "page" "uploads/_index.md" }}
+{{ with .Resources.GetMatch $about_hero_img }}
+{{$about_hero := .Fill "1440x436 BottomRight"}}
+<div id="" class="jumbotron row" style="background-image: url('{{ $about_hero.RelPermalink }}');">
 </div>
+{{ end }}
+{{ end }}
+
 
 <div class="row about-descr">
   <div class="col col-lg-7 col-md-8 col-sm-12 offset-lg-1 offset-md-1">
