Change homepage Who We Are content

--- a/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/index.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<h3 class="who-we-are" tabindex="0">Who We Are</h3>
+<h3 class="who-we-are" tabindex="0">Why Dignity?</h3>
 <div class="row who-we-are flex-parent">
     {{ $img := strings.TrimPrefix "/uploads/" .Page.Params.who_we_are_image }}
     {{ with $.Site.GetPage "page" "uploads/_index.md" }}
