--- a/themes/vanilla-bootstrap-hugo-theme/layouts/section/meetings.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/section/meetings.html
@@ -18,12 +18,12 @@
 </div>
 
 
-<div class="row news-banner whydignity">
+<!--<div class="row news-banner whydignity">
   <div class="column col-lg-8 col-md-8 col-sm-10 offset-lg-2 offset-md-2 offset-sm-1">
     <h3 tabindex="0">Why Dignity?</h3>
     <span tabindex="0">Why are we talking about dignity when talking about debt? Autonomy and protection from abuse. Does debt necessarily erode a person’s autonomy as she decides who she is and to behave as is she has a sense of free will? And when debt result from exploitation and abuse? Can we re-imagine a world in which debt does not have to accompany indignity?</span>
   </div>
-</div>
+</div>-->
 
 <div class="row the-roundtable">
   <div class="col-lg-3 col-md-4 col-sm-10 offset-lg-1 offset-md-1 offset-sm-1 order-lg-0 order-md-0 img-parent">
