--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/head.html
@@ -77,6 +77,7 @@
   <!-- font awesome for social icons in footer -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.typekit.net/ayl0mep.css">
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   <!-- Page title -->
   {{ $title := print .Title " | " .Site.Title }}
   {{ if .IsHome }}
