--- a/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
+++ b/themes/vanilla-bootstrap-hugo-theme/layouts/partials/style.html
@@ -14,7 +14,8 @@
     @media (min-width: 769px) {
       .home .container.parent {
         background-image: url('{{ $img1440.RelPermalink }}');
-        background-color: rgba(10, 61, 95, 0.24) !important;
+        background-color: rgba(10, 61, 95, 0.1) !important; 
+        /* background-color: transparent !important; */
         background-blend-mode: multiply;
         background-size: 1440px auto;
         background-position: 43% 0;
@@ -28,7 +29,8 @@
 {{ end }}
 @media (min-width: 769px) {
   .home .container.parent {
-    background-color: rgba(10, 61, 95, 0.24) !important;
+    background-color: rgba(10, 61, 95, 0.1) !important; 
+    /* background-color: transparent !important; */
     background-blend-mode: multiply;
     background-size: 1440px auto;
     background-position: 43% 0;
@@ -58,7 +60,8 @@
   }
 }
 #home-jumbotron {
-  background-color: rgba(10, 61, 95, 0.24);
+  background-color: rgba(10, 61, 95, 0.1); 
+  /* background-color: transparent !important; */
   background-blend-mode: multiply;
   background-position: 43% -68px;
   background-size: 1440px auto;
