--- a/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
+++ b/themes/vanilla-bootstrap-hugo-theme/assets/scss/dnd-custom.scss
@@ -862,7 +862,10 @@ body.about {
         h2 {
           font-family: $brandongrotesque-bold;
           // line-height: 2.6rem;
-          font-size: 4rem;
+          font-size: 2.8rem;
+          @include media-breakpoint-up(md) {
+            font-size: 4rem;
+          }
           text-transform: uppercase;
         }
 
@@ -878,7 +881,9 @@ body.about {
     &.about-objective {
       margin-bottom: 11.6rem;
       display: inline-block;
-      @include media-breakpoint-down(md) {
+      padding-left: 1px;
+      padding-right: 1px;
+      @include media-breakpoint-up(md) {
         padding-left: 4rem;
         padding-right: 4rem;
       }
@@ -888,7 +893,10 @@ body.about {
       .number {
         span {
           font-family: $brandongrotesque-bold;
-          font-size: 7rem;
+          font-size: 6rem;
+          @include media-breakpoint-up(md) {
+            font-size: 7rem;
+          }
           color: $aqualink;
         }
       
@@ -897,7 +905,7 @@ body.about {
           margin-right: 3.2rem;
         }
         @include media-breakpoint-down(sm) {
-          width: 35%;
+          width: 31%;
           max-width: 46%;
           /* width: 300px; */
           display: inline-block;
@@ -910,7 +918,13 @@ body.about {
       .descr {
         h3 {
           font-family: $brandongrotesque-bold;
-          font-size: 2.8rem;
+          font-size: 2.4rem;
+          margin-bottom: 1.6rem;
+          margin-top: 3.2rem;
+          @include media-breakpoint-up(md) {
+            font-size: 2.8rem;
+            margin-top: 0;
+          }
           line-height: 3.2rem;
           color: $dnd-navy;
           text-transform: uppercase;
@@ -1005,7 +1019,10 @@ body.about {
       margin-bottom: 5.2rem;
       h2 {
         font-family: $brandongrotesque-bold;
-        font-size: 4rem;
+        font-size: 2.8rem;
+          @include media-breakpoint-up(md) {
+            font-size: 4rem;
+          }
         // line-height: 3.2rem;
         color: $dnd-navy;
         text-transform: uppercase;
@@ -1015,6 +1032,14 @@ body.about {
     }
 
     &.about-director {
+      @include media-breakpoint-down(sm) {
+        .col.col-6.offset-3 {
+          max-width: 100%;
+          /* display: block; */
+          flex: 0 0 100%;
+          margin-left: 0;
+         }
+        }
       .pic {
         text-align: center;
         margin-bottom: 2.4rem;
@@ -1258,7 +1283,10 @@ body.type-projects.kind-section {
 
     h2 {
       font-family: $brandongrotesque-bold;
-      font-size: 3.2rem;
+      font-size: 2.4rem;
+          @include media-breakpoint-up(md) {
+            font-size: 3.2rem;
+          }
       color: $dnd-navy;
       line-height: 4rem;
       text-transform: uppercase;
@@ -1404,7 +1432,10 @@ body.type-meetings.kind-section {
 
     h3 {
       font-family: $brandongrotesque-bold;
-      font-size: 4rem;
+      font-size: 2.8rem;
+          @include media-breakpoint-up(md) {
+            font-size: 4rem;
+          }
       text-transform: uppercase;
       color: $dnd-navy;
       margin-bottom: 0.8rem;
@@ -1466,7 +1497,11 @@ body.type-meetings.kind-section {
       .text {
         h3 {
           font-family: $brandongrotesque-bold;
-          font-size: 4rem;
+          font-size: 2.8rem;
+          margin-bottom: 1.6rem;
+          @include media-breakpoint-up(md) {
+            font-size: 3.2rem;
+          }
           color: $dnd-navy;
           text-transform: uppercase;
         }
@@ -1485,7 +1520,11 @@ body.type-meetings.kind-section {
       .column {
 
         h3 {
-          font-size: 4rem;
+          font-size: 2.8rem;
+          margin-bottom: 1.6rem;
+          @include media-breakpoint-up(md) {
+            font-size: 3.2rem;
+          }
         }
         span {
           font-family: $font-family-base;
@@ -1536,7 +1575,10 @@ body.type-meetings.kind-section {
     &.heading {
       h2 {
         font-family: $brandongrotesque-bold;
-        font-size: 4rem;
+        font-size: 2.8rem;
+          @include media-breakpoint-up(md) {
+            font-size: 4rem;
+          }
         color: $dnd-navy;
         text-align: center;
         width: 100%;
